--- a/gradientwipe.html
+++ b/gradientwipe.html
@@ -3,9 +3,13 @@
 <head>
   <title>Seriously.js Gradient Wipe Example</title>
   <style>
+  body{
+    width: 655px;
+  }
   canvas {
     display: block;
     border: black solid 1px;
+    margin: auto;
   }
 
   img {
